# WmPrediction

./: .env.example  .gitignore  README.md  WM2026_Predictor_Konzept.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/api/: main.py  schemas.py
backend/api/routes/: bracket.py  data.py  groups.py  model.py  predictions.py  simulation.py  standings.py
backend/core/: config.py  database.py
backend/data/clients/: football_data.py
backend/data/etl/: refresh.py
backend/models/: db.py
backend/prediction/: dixon_coles.py  elo.py  ensemble.py  ml_workflow.py
backend/scripts/: train_model.py
backend/simulation/: monte_carlo.py
backend/tests/: test_api.py  test_group_phase.py
backend/tournament/: bracket.py  group_phase.py  service.py  third_place.py
backend/wm2026_predictor_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/data/refresh/: route.ts
frontend/app/api/groups/setup-all/: route.ts
frontend/app/api/predictions/match/: route.ts
frontend/app/bracket/: page.tsx
frontend/app/groups/: page.tsx
frontend/app/setup/: page.tsx
frontend/app/simulation/: page.tsx
frontend/components/: GroupSetupEditor.tsx  PredictionForm.tsx  RefreshDataCard.tsx  TournamentPlayoutCard.tsx
frontend/components/tournament/: BracketList.tsx
frontend/lib/: api.ts
frontend/types/: tournament.ts
scripts/: deploy.ps1  deploy.sh
(+1 files in other folders)
